--- a/myapp/templates/Impuestos/impuestos.html
+++ b/myapp/templates/Impuestos/impuestos.html
@@ -3,7 +3,7 @@
 {% block title %}Gestión de Impuestos{% endblock %}
 
 {% block content %}
-<div class="container mx-auto py-8">
+<div class="container mx-auto py-8 pl-5">
     {% if messages %}
         <div id="messages-container" class="fixed top-21 right-11 space-y-2">
             {% for message in messages %}
