--- a/myapp/templates/admin/crear_usuario.html
+++ b/myapp/templates/admin/crear_usuario.html
@@ -65,8 +65,8 @@
             </div>
 
             <div class="flex justify-between mt-6">
-                <a href="{% url 'dashboard' %}" class="btn btn-secondary">Volver</a>
-                <button type="submit" class="btn btn-primary">Crear Usuario</button>
+                <a href="{% url 'dashboard' %}" class="px-4 py-2 bg-gray-400 text-white rounded-md hover:bg-gray-500">Volver</a>
+                <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">Crear Usuario</button>
             </div>
         </form>
     </div>
