--- a/myapp/templates/Movimientos/listar_movimientos.html
+++ b/myapp/templates/Movimientos/listar_movimientos.html
@@ -3,7 +3,7 @@
 {% block title %}Lista de Movimientos{% endblock %}
 
 {% block content %}
-<div class="container mx-auto py-8">
+<div class="container mx-auto py-8 pl-5">
     <h2 class="text-4xl font-bold mb-6 mt-6 text-gray-800">Lista de Movimientos</h2>
 
     <div class="flex justify-between items-center mb-6">
