--- a/myapp/templates/admin/crear_grupo.html
+++ b/myapp/templates/admin/crear_grupo.html
@@ -56,7 +56,7 @@
                     Volver
                 </a>
                 <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
-                    Crear Grupo
+                    Crear Rol
                 </button>
             </div>
         </form>
