--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -65,7 +65,7 @@
             <i class="fas fa-chart-line text-3xl mr-4"></i>
             <h2 class="text-xl font-bold">Ventas 2025</h2>
         </div>
-        <p class="text-2xl">Bs. {{ ventas_totales }}</p>
+        <p class="text-2xl">$. {{ ventas_totales }}</p>
         <p class="text-sm text-gray-200">Facturas emitidas: {{ facturas_emitidas }}</p>
     </div>
 
@@ -74,7 +74,7 @@
             <i class="fas fa-shopping-cart text-3xl mr-4"></i>
             <h2 class="text-xl font-bold">Compras 2025</h2>
         </div>
-        <p class="text-2xl">Bs. {{ compras_totales }}</p>
+        <p class="text-2xl">$. {{ compras_totales }}</p>
         <p class="text-sm text-gray-200">Compras realizadas: {{ compras_realizadas }}</p>
     </div>
 
